# EMOTE

./: Practical_1.ipynb  README.md  fasttext_text.txt  main.py
EMOTE/: E_MOTE.py
EMOTE_directory/: pyproject.toml
EMOTE_directory/src/E_MOTE/: E_MOTE.py
E_MOTE/: E_MOTE.py
Util/: ReadFile.py  TextProcessing.py
example/: ReadFile.py  TextProcessing.py  main.py
