[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "E_MOTE"
version = "0.0.1"
authors = [
  { name="Nesta-gitU", email="nesta04.vu@gmail.com" },
]
description = "Oversampling method using word embeddings"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Nesta-gitU/oversample"
"Bug Tracker" = "https://github.com/Nesta-gitU/oversample/issues"